[build-system]
requires = ["setuptools>=65.5", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsp-api"
version = "0.1.0"
description = "可扩展的旅行商问题（TSP）求解 API 套件"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = ["pytest>=7.2"]
